# project_payment

./: .gitignore  CMakeLists.txt  README.md
accounts/: account-card.txt  account-pix.txt
logTransaction/: logTransFile.txt
payment/: CMakeLists.txt  Makefile  accountFunctions.c  accountFunctions.h  main  main.c  screen.c  screen.h  transactions.c  transactions.h
test/: CMakeLists.txt  main_test.cpp  payment_test.cpp
